<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/windowBackground"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_paired_devices"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:visibility="gone"
        android:background="?android:attr/colorBackgroundFloating"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerHorizontal"
        android:dividerHeight="1dp"
        android:background="?android:attr/windowBackground"
        android:padding="8dp" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_other_devices"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:visibility="gone"
        android:background="?android:attr/colorBackgroundFloating"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerHorizontal"
        android:dividerHeight="1dp"
        android:background="?android:attr/windowBackground"
        android:padding="8dp" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        android:textSize="18sp"
        android:background="#40AEFC"
        android:textColor="@android:color/white"
        android:elevation="4dp"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:gravity="center" />
</LinearLayout>